--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.15.0",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
