--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.18.0",
+    "multer": "^2.0.2",
     "sharp": "^0.34.3"
   }
 }
