--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.18.0",
     "multer": "^2.0.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "socket.io": "^4.8.1"
   }
 }
