--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.2.1",
+    "@types/nodemailer": "^7.0.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -44,10 +45,12 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "fs-extra": "^11.3.1",
+    "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.18.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1"
   }
