--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.2.1",
     "@types/nodemailer": "^7.0.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -51,7 +53,9 @@
     "mongodb": "^6.18.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
     "sharp": "^0.34.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "speakeasy": "^2.0.0"
   }
 }
