--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-useragent": "^1.0.5",
     "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
@@ -45,6 +46,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-useragent": "^1.0.15",
     "express-validator": "^7.2.1",
     "fs-extra": "^11.3.1",
     "google-auth-library": "^10.2.1",
